--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
   }
 }
